SFDC Automation/src/objects/Rate_Sheet__c.object
<CustomObject>
    <description>Will be populated with data from Radar</description>
    <fields>
        <fullName>Branch_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch No</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>Rate Sheets</relationshipLabel>
        <relationshipName>Rate_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Summary</label>
        <referenceTo>Deal_Summary__c</referenceTo>
        <relationshipLabel>Rate Sheets</relationshipLabel>
        <relationshipName>Rate_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVA__c</fullName>
        <label>EVA</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FuelType__c</fullName>
        <description>Engine Fuel Type, get it from RADAR</description>
        <label>Fuel Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Include_In_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_EVA__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to indicate if the EVA value should be rolled up and displayed at the Opportunity Detail page</description>
        <label>Include in EVA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Investment__c</fullName>
        <label>Net Investment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Vehicles__c</fullName>
        <label># of Vehicles</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Revenue__c</fullName>
        <label>Old Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rate Sheets</relationshipLabel>
        <relationshipName>Rate_Sheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Create_Date__c</fullName>
        <label>Original Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Regular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet_Name__c</fullName>
        <inlineHelpText>Name of the Rate Sheet from Radar</inlineHelpText>
        <label>Rate Sheet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Difference__c</fullName>
        <description>Field to represent the time difference between Creation date of Rate Sheet and Opportunity</description>
        <formula>DATEVALUE(Original_Create_Date__c) - DATEVALUE(Opportunity__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to represent the time difference between Creation date of Rate Sheet and Opportunity</inlineHelpText>
        <label>Time Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add/Drop Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Insurance Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion to Contract Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion to Term Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessee  Re-Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New/Add Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk Continuation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ext_ratesheet_id__c</fullName>
        <externalId>true</externalId>
        <label>ext_ratesheet_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Rate Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Sheet #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_UpdatesOnRateSheet</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( Name ) || ISCHANGED( Rate_Sheet_Name__c ) ||  ISCHANGED( Product_Line__c ) || ISCHANGED( Package_Type__c ) || ISCHANGED( Gross_Revenue__c ) || ISCHANGED( No_of_Vehicles__c )  ||  ISCHANGED( EVA__c ) || ISCHANGED( ext_ratesheet_id__c ) || ISCHANGED( Deal_Summary__c ) || ISCHANGED( Transaction_Type__c ) || ISCHANGED( Branch_No__c ) || ISCHANGED( Old_Revenue__c ) || ISCHANGED( FuelType__c )) &amp;&amp; AND(NOT($Profile.Name = &apos;System Administrator&apos;), NOT($Profile.Name = &apos;SSO System Administrator&apos;), NOT($Profile.Name = &apos;Business Admin&apos;), NOT($Profile.Name = &apos;Business Admin Non SSO&apos;), NOT($Profile.Name = &apos;Business Support&apos;))</errorConditionFormula>
        <errorMessage>No changes are allowed on this page. if you are trying to update the Include in Quote, please go to the Opportunity Details Page. For any other updates, go to Radar using the Edit in Radar link on the Opportunity Details Page.</errorMessage>
    </validationRules>
</CustomObject>